--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Full-stack real estate form management application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "lint": "eslint ."
   },
   "author": "Xiwen Teoh",
   "license": "MIT",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^29.0.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.2.4"
