--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "form-data": "^4.0.0",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
